<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	    android:id="@+id/HorizontalScrollView01"
	    android:layout_width="wrap_content"
	    android:layout_height="match_parent" >
    	
<TableLayout
    android:id="@+id/tableLayout1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        	<TextView
        	    android:id="@+id/T1"
        	    android:layout_width="wrap_content"
        	    android:layout_height="wrap_content"
        	    android:layout_gravity="center"
        	    android:text="@string/player1"
        	    android:textAppearance="?android:attr/textAppearanceLarge" />
        	
        	<ImageView
		        android:id="@+id/T2"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
            	android:gravity="right"
		        android:src="@drawable/tictactoe_cross" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
        	<TextView
        	    android:id="@+id/T1"
        	    android:layout_width="wrap_content"
        	    android:layout_height="wrap_content"
        	    android:layout_gravity="center"
        	    android:text="@string/player2"
        	    android:textAppearance="?android:attr/textAppearanceLarge" />
        	
        	<ImageView
		        android:id="@+id/T2"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
            	android:gravity="right"
		        android:src="@drawable/tictactoe_circle" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        	<TextView
        	    android:id="@+id/T1"
        	    android:layout_width="200dp"
        	    android:layout_height="wrap_content"
        	    android:text="@string/desc"
        	    android:textAppearance="?android:attr/textAppearanceLarge" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

		    <Button
		        android:id="@+id/start"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/start" />
        
    </TableRow>
</TableLayout>
</ScrollView>